# CoA_Proj

./: .gitignore  README.md  compress.py  demo.py  generate_test_image.py  requirements.txt  results_summary.txt  test_kodak.py
cpp/: CMakeLists.txt  codec.hpp  color_transform.hpp  entropy_coder.hpp  main.cpp  matrix.hpp  wavelet_transform.hpp
python/: codec.py  color_transform.py  context_model.py  entropy_coder.py  wavelet_transform.py
